--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -55,7 +55,7 @@ nav .right-side a {
   font-size: 15px;
   margin-top: -50px;
   padding: 8px 20px;
-  background-color: #645cbb;
+  background-color: #645cbb !important;
   border-radius: 10px;
   color: #fff;
   text-decoration: none;
