--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -2,7 +2,7 @@
 .container {
   display: flex;
   flex-direction: row;
-  margin: 50px 100px 20px 100px;
+  margin: 50px;
 
   gap: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -18,15 +18,15 @@ section {
 
 .left-content {
   flex: 70%;
-  margin: 40px 40px 40px 40px;
+  margin: 50px 40px 40px 40px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
 }
 
 .right-content {
-  flex: 70%;
-  margin-left: 50px;
+  flex: 30%;
+  /* margin-left: 50px; */
 }
 
 .container-skill {
@@ -51,7 +51,7 @@ section {
 }
 
 .download {
-  margin: 25px 0px 0px 40px;
+  margin: 25px 25px 0px 0;
   display: flex;
   flex-direction: row;
 }
